Добавил delete item
